--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         { name: "Plank", sets: "3 × 45 s", rest: "45 s", notes: "Squeeze glutes.", media: "" }
       ],
       Tuesday: [
-        { name: "Incline Push-ups", sets: "4 × 12", rest: "60 s", notes: "Full range.", media: "https://www.youtube.com/watch?v=IODxDxX7oi4" },
+        { name: "Incline Push-ups", sets: "4 × 12", rest: "60 s", notes: "Full range.", media: https://www.youtube.com/watch?v=uPBKXrFBynM },
         { name: "Band Row", sets: "4 × 15", rest: "60 s", notes: "Elbows low.", media: "" },
         { name: "Dead Bug", sets: "3 × 10/side", rest: "45 s", notes: "Ribs down.", media: "" }
       ],
